Update 과거의 나 그리고 앞으로의 나.md

--- a/끄적끄적../과거의 나 그리고 앞으로의 나.md
+++ b/끄적끄적../과거의 나 그리고 앞으로의 나.md
@@ -1,5 +1,5 @@
 ## 이 글을 읽고 있는 여러분은 누군가 "왜?"라고 물어본다면 대답할 수 있는 개발자인가요?
-
+<br/>
 2022년, ICT 공모전을 진행할 때의 나는 생각없이 코드를 짜는 코더였다. <br/>
 아무생각 없이 사용하는 기술들이 남발하고 그런 나를 되돌아보면서 근거있는 개발자가 되고 싶었다. <br/>
 그래서 백엔드 데브코스에 지원했다. <br/>
@@ -18,4 +18,5 @@
 단순 코더가 아닌 코드와 기술에 나의 생각을 담을 수 있고 "왜?"를 말할 수 있는 개발자가 되기 위해 다시 이야기 써보자. <br/>
 <br/>
 <br/>
-> 여러분도 "왜?" 라는 질문에 대답할 수 있는 개발자인지 끊임없이 질문해봤으면 좋겠습니다.
+
+> **여러분도 "왜?" 라는 질문에 대답할 수 있는 개발자인지 끊임없이 질문해봤으면 좋겠습니다.**
